--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-client/build
+*/build
 
 # Dependency directories
 node_modules/
