--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.21.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -26,8 +28,7 @@
     "redux": "^4.0.5",
     "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
-    "uuid": "^8.3.0",
-    "firebase": "^7.20.0"
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
