--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,11 @@
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.21.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "popper": "^1.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
