--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@microsoft/signalr": "^3.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,6 +20,7 @@
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.21.1",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper": "^1.0.1",
