--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
     "uuid": "^8.3.0"
