--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "alizee-react-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "http://127.0.0.1:8000",
+  "secure": false,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
