--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.5",
     "numeral": "^2.0.6",
     "popper": "^1.0.1",
     "react": "^16.14.0",
