Task: #801 Fix media link

--- a/client/.env.production
+++ b/client/.env.production
@@ -5,6 +5,6 @@ REACT_APP_REMOTE_DOMAIN = 194.67.93.7:$REACT_APP_REMOTE_PORT_HTTPS
 REACT_APP_DOMAIN = $REACT_APP_REMOTE_DOMAIN
 REACT_APP_RECAPTCHA_KEY = 6LcId9wZAAAAABkaj390EbrSCRDL_7nzKdyn91YM
 REACT_APP_SS_PORT = 8000
-REACT_APP_SS_DOMAIN = 194.67.93.7:$REACT_APP_SS_PORT
+REACT_APP_SS_DOMAIN = alizee.pro:$REACT_APP_SS_PORT
 
 REACT_APP_GOOGLE_CLIENT_ID = 57302216415-sqil8islp95mpok7n3o2mrsus3hmu3o3.apps.googleusercontent.com
