change ENV.PROD environments

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,7 +1,6 @@
-
-REACT_APP_REMOTE_PORT_HTTP = 82
-REACT_APP_REMOTE_PORT_HTTPS = 83
-REACT_APP_REMOTE_DOMAIN = 194.67.93.7:$REACT_APP_REMOTE_PORT_HTTPS
+REACT_APP_REMOTE_PORT_HTTP = 80
+REACT_APP_REMOTE_PORT_HTTPS = 443
+REACT_APP_REMOTE_DOMAIN = alizee.pro:$REACT_APP_REMOTE_PORT_HTTPS
 REACT_APP_DOMAIN = $REACT_APP_REMOTE_DOMAIN
 REACT_APP_RECAPTCHA_KEY = 6LcId9wZAAAAABkaj390EbrSCRDL_7nzKdyn91YM
 REACT_APP_SS_PORT = 8000
