--- a/client/.env.development
+++ b/client/.env.development
@@ -1,17 +1,6 @@
-REACT_APP_TESTING_PORT_HTTPS = 44341
-REACT_APP_TESTING_PORT_HTTP = 5000
-REACT_APP_REMOTE_PORT_HTTP = 82
-REACT_APP_REMOTE_PORT_HTTPS = 83
-REACT_APP_SIGNAL_SERVER_REMOTE_PORT = 8000
-REACT_APP_LOCALHOST_DOMAIN = localhost:$REACT_APP_TESTING_PORT_HTTPS
-REACT_APP_REMOTE_DOMAIN = 194.67.93.7:$REACT_APP_REMOTE_PORT_HTTPS
-REACT_APP_LOCALHOST_SIGNAL_SERVER = localhost:$REACT_APP_SIGNAL_SERVER_REMOTE_PORT
-REACT_APP_REMOTE_SIGNAL_SERVER = 194.67.93.7:$REACT_APP_SIGNAL_SERVER_REMOTE_PORT
-REACT_APP_DOMAIN = $REACT_APP_LOCALHOST_DOMAIN
-REACT_APP_SIGNAL_SERVER_DOMAIN = $REACT_APP_LOCALHOST_SIGNAL_SERVER
+REACT_APP_PORT = 80
+REACT_APP_DOMAIN = localhost:$REACT_APP_PORT
+REACT_APP_SS_DOMAIN = 194.67.93.7:8000
+
 REACT_APP_RECAPTCHA_KEY = 6LcId9wZAAAAABkaj390EbrSCRDL_7nzKdyn91YM
-
-REACT_APP_SS_PORT = 8000
-REACT_APP_SS_DOMAIN = 194.67.93.7:$REACT_APP_SS_PORT
-
 REACT_APP_GOOGLE_CLIENT_ID = 57302216415-sqil8islp95mpok7n3o2mrsus3hmu3o3.apps.googleusercontent.com
