--- a/client/.env.production
+++ b/client/.env.production
@@ -1,6 +1,6 @@
 REACT_APP_PORT = 443
 REACT_APP_DOMAIN = themembers.com:$REACT_APP_PORT
-REACT_APP_SS_DOMAIN = themembers.com:8000
+REACT_APP_SS_DOMAIN = themembers.com:$REACT_APP_PORT
 
 REACT_APP_RECAPTCHA_KEY = 6LcId9wZAAAAABkaj390EbrSCRDL_7nzKdyn91YM
 REACT_APP_GOOGLE_CLIENT_ID = 57302216415-sqil8islp95mpok7n3o2mrsus3hmu3o3.apps.googleusercontent.com
