Added Prettier Config file and ESLint for files formatting

--- a/client/package.json
+++ b/client/package.json
@@ -82,5 +82,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0"
+  }
 }
