--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,15 +22,27 @@
   ],
   "rules": {
     "prettier/prettier": [
-      "error"
+      "off",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/jsx-filename-extension": [
+      "off",
+      {
+        "allow": "as-needed"
+      }
     ],
     "semi": [
-      "error",
+      "warn",
       "always"
     ],
     "quotes": [
-      "error",
+      "warn",
       "double"
+    ],
+    "react/prop-types": [
+      "off"
     ]
   }
 }
