--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,13 @@ steps:
     versionSpec: '14.x'
     checkLatest: true
 
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Build.SourcesDirectory)'
-    artifact: 'react-spa'
-
 - script: |
     npm install
     npm test
     npm run build
   displayName: 'npm install -> npm test -> npm build'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.SourcesDirectory)/build'
+    artifact: 'react-spa'
