Added echo to test env

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,9 @@ steps:
     artifact: 'react-spa'
 
 - script: |
+    echo $(REACT_APP_DOMAIN)
+
+- script: |
     npm install
     npm test
     npm run build
