Added envs to azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,13 @@ steps:
     npm test
     npm run build
   displayName: 'npm install -> npm test -> npm build'
+  env:
+    REACT_APP_PORT: $(REACT_APP_PORT)
+    REACT_APP_DOMAIN: $(REACT_APP_DOMAIN)
+    REACT_APP_SS_DOMAIN: $(REACT_APP_SS_DOMAIN)
+    REACT_APP_RECAPTCHA_KEY: $(REACT_APP_RECAPTCHA_KEY)
+    REACT_APP_GOOGLE_CLIENT_ID: $(REACT_APP_GOOGLE_CLIENT_ID)
+    REACT_APP_STUN_SERVERS: $(REACT_APP_STUN_SERVERS)
+    REACT_APP_TURN_SERVER_URL: $(REACT_APP_TURN_SERVER_URL)
+    REACT_APP_TURN_SERVER_USERNAME: $(REACT_APP_TURN_SERVER_USERNAME)
+    REACT_APP_TURN_SERVER_CREDENTIAL: $(REACT_APP_TURN_SERVER_CREDENTIAL)
