--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --nomaps",
+    "build": "react-scripts build",
     "test": "jest --config ./jest.config.json",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject",
